--- a/QFun/Views/MyPage/_User.cshtml
+++ b/QFun/Views/MyPage/_User.cshtml
@@ -9,7 +9,7 @@
 
     <div>
         <img id="profile-picture" class="border border-dark"
-             src="~/images/bild-saknas.jpg" alt="Alternate Text"
+             src="~/images/bild-saknas.jpg"
              width="128" height="128" />
     </div>
 
