--- a/QFun/Views/Shared/_Layout.cshtml
+++ b/QFun/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewData["Title"] - QFun</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/js/Chart.min.js"></script>
+    <script src="~/js/utils.js"></script>
+
 </head>
 <body>
     <header>
