--- a/QFun/Views/MyPage/_User.cshtml
+++ b/QFun/Views/MyPage/_User.cshtml
@@ -15,7 +15,7 @@
 
 
     <ol class="breadcrumb col-lg-10">
-        <li class="breadcrumb-item"><a href="#">About me</a></li>
+        <li class="breadcrumb-item"><a asp-area="Views" asp-controller="MyPage" asp-action="_AboutMe">About ME!!</a></li>
         <li class="breadcrumb-item mt-lg-auto"><a href="#">Contributions</a></li>
         <li class="breadcrumb-item mt-lg-auto"><a asp-area="Views" asp-controller="MyPage" asp-action="_Chart">Challenge Statistics</a></li>
     </ol>
