--- a/QFun/Views/MyPage/_AboutMe.cshtml
+++ b/QFun/Views/MyPage/_AboutMe.cshtml
@@ -1,7 +1,11 @@
-﻿
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+@inject RoleManager<IdentityRole> RoleManager
 @{
     ViewData["Title"] = "_AboutMe";
 }
+@User.Identity.Name
+@Html.ViewData.Values
 
-<h1>_AboutMe</h1>
 
