--- a/QFun/Views/MyPage/_AboutMe.cshtml
+++ b/QFun/Views/MyPage/_AboutMe.cshtml
@@ -1,23 +1,20 @@
-﻿@using Microsoft.AspNetCore.Identity
-@model QFun.Models.AboutMeVm
-@inject SignInManager<QFun.Data.DbTables.ApplicationUser> SignInManager
-@inject UserManager<QFun.Data.DbTables.ApplicationUser> UserManager
-@inject RoleManager<IdentityRole> RoleManager
+﻿@model QFun.Models.AboutMeVm
 @{
     ViewData["Title"] = "_AboutMe";
 }
-@User.Identity.Name
-@Html.ViewData.Values
-
 <h1>About me</h1>
 
 <form asp-action="_AboutMe" class="">
     <div class="form-group">
         <label asp-for="AboutMe" class="control-label">About me</label>
-        <input asp-for="AboutMe" class="form-control" />
+        <textarea asp-for="AboutMe" class="form-control"></textarea>
         <span asp-validation-for="AboutMe"></span>
 
     </div>
     <button type="submit" value="Save" class="btn btn-primary">Register</button>
 </form>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 
