--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -1,6 +1,36 @@
 ﻿@model ContributionsVm;
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 
-<h1>test</h1>
+<h1>Contributions</h1>
+
+
+
+@if (SignInManager.IsSignedIn(User))
+{
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Contributions" asp-route-id="@Model.ChallengeId">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Path" class="control-label"></label>
+                    <input asp-for="Path" class="form-control" />
+                    <span asp-validation-for="Path" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <input asp-for="Description" class="form-control" />
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
+
+}
 
 
 <table class="table">
@@ -12,7 +42,9 @@
             <th>
                 Description
             </th>
-
+            <th>
+                Time Of Upload
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -20,10 +52,13 @@
         {
             <tr>
                 <td>
-                        @Html.DisplayFor(modelItem => item.Path)
+                    @Html.DisplayFor(modelItem => item.Path)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TimeOfUpload)
                 </td>
             </tr>
         }
@@ -31,3 +66,7 @@
 
     </tbody>
 </table>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
