--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -1,30 +1,37 @@
 ﻿@model ContributionsVm;
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<QFun.Data.DbTables.ApplicationUser> SignInManager
+@inject UserManager<QFun.Data.DbTables.ApplicationUser> UserManager
+@inject RoleManager<IdentityRole> RoleManager
 
 <h1>Contributions</h1>
 
 
+@if(SignInManager.IsSignedIn(User))
+{
 
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="Contributions" asp-route-id="@Model.ChallengeId">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Path" class="control-label"></label>
-                    <input asp-for="Path" class="form-control" />
-                    <span asp-validation-for="Path" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>
-        </div>
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Contributions" asp-route-id="@Model.ChallengeId">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Path" class="control-label"></label>
+                <input asp-for="Path" class="form-control" />
+                <span asp-validation-for="Path" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+        </form>
     </div>
+</div>
 
+}
 
 <table class="table">
     <thead>
