--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -7,29 +7,29 @@
 <h1>Contributions</h1>
 
 
-@if(SignInManager.IsSignedIn(User))
+@if (SignInManager.IsSignedIn(User))
 {
-    <h2>@User.Identity.Name Add your contribution</h2>
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Contributions" asp-route-id="@Model.ChallengeId">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Path" class="control-label"></label>
-                <input asp-for="Path" class="form-control" />
-                <span asp-validation-for="Path" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h3>@User.Identity.Name add your contribution</h3>
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Contributions" asp-route-id="@Model.ChallengeId">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Path" class="control-label"></label>
+                    <input asp-for="Path" class="form-control" />
+                    <span asp-validation-for="Path" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <input asp-for="Description" class="form-control" />
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
 }
 
@@ -45,6 +45,12 @@
             <th>
                 Time Of Upload
             </th>
+            <th>
+                Made By
+            </th>
+            <th>
+                Votes
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -59,6 +65,13 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.TimeOfUpload)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.User.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Votes)
+                    <a asp-controller="Challenge" asp-action="Vote">Vote</a>
                 </td>
             </tr>
         }
