--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -73,7 +73,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Votes.Count)
 
-                    <button type="submit" value="VoteButton" name="VoteButton" class="btn-outline-primary">Vote</button>
+                    <input type="submit" name="VoteButton" value="VoteButton" class="btn btn-success" />
                 </td>
             </tr>
         }
