--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -7,7 +7,8 @@
 <h1>Contributions</h1>
 
 
-
+@if (SignInManager.IsSignedIn(User))
+{
 <div class="row">
     <div class="col-md-4">
         <form enctype="multipart/form-data" asp-action="Contributions" asp-route-id="@Model.ChallengeId">
@@ -28,6 +29,8 @@
         </form>
     </div>
 </div>
+}
+
 
 
 
@@ -54,9 +57,11 @@
     <tbody>
         @foreach (var item in Model.Contributions)
         {
+       
+
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Path)
+                    <img src="~/images/@Url.Content(item.Path)" alt="Alternate Text" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
@@ -70,15 +75,20 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Votes.Count)
-
-                    <input type="submit" name="VoteButton" value="VoteButton" class="btn btn-success" />
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        <a asp-action="Votes" asp-route-id="@item.Id">rösta</a>
+                    }
+                    @*<input type="submit" name="VoteButton" value="Rösta" class="btn btn-success"/>*@
                 </td>
             </tr>
+       
         }
 
 
     </tbody>
 </table>
+
 
 <div>
     <a asp-action="Index">Back to List</a>
