--- a/QFun/Views/MyPage/_Chart.cshtml
+++ b/QFun/Views/MyPage/_Chart.cshtml
@@ -31,7 +31,7 @@
         data: {
             labels: chData,
             datasets: [{
-                label: 'Number of Votes',
+                label: 'Antal röster',
                 data: voteData,
                 backgroundColor: [
                     'rgba(255, 99, 132, 0.2)',
@@ -60,7 +60,7 @@
                     display: true,
                     scaleLabel: {
                         display: true,
-                        labelString: 'Challenge Name'
+                        labelString: 'Utmaningens namn'
                     }
                 }],
                 yAxes: [{
@@ -68,7 +68,7 @@
                     display: true,
                     scaleLabel: {
                         display: true,
-                        labelString: 'Votes'
+                        labelString: 'Röster'
                     }
                 }]
             },
