--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -14,17 +14,17 @@
         <form enctype="multipart/form-data" asp-action="Contributions" asp-route-id="@Model.ChallengeId">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group row">
-                <label asp-for="Image" class="control-label"></label>
+                <label asp-for="Image" class="control-label">Bild</label>
                 <input asp-for="Image" class="form-control" />
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="control-label">Beskrivning</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Skapa" class="btn btn-primary" />
             </div>
         </form>
     </div>
@@ -38,19 +38,16 @@
     <thead>
         <tr>
             <th>
-                Path
+                Bild
             </th>
             <th>
-                Description
+                Beskrivning
             </th>
             <th>
-                Time Of Upload
+                Gjord av
             </th>
             <th>
-                Made By
-            </th>
-            <th>
-                Votes
+                Röster
             </th>
         </tr>
     </thead>
@@ -61,13 +58,10 @@
 
             <tr>
                 <td>
-                    <img src="~/images/@Url.Content(item.Path)" alt="Alternate Text" />
+                    <img src="~/images/@Url.Content(item.Path)" alt="Image not loaded" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TimeOfUpload)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.User.UserName)
@@ -91,5 +85,5 @@
 
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Tillbaka till alla utmaningar</a>
 </div>
