--- a/QFun/Views/MyPage/_Admin.cshtml
+++ b/QFun/Views/MyPage/_Admin.cshtml
@@ -1,12 +1,13 @@
-﻿
+﻿@using Microsoft.AspNetCore.Identity
+@inject UserManager<QFun.Data.DbTables.ApplicationUser> UserManager
 @{
     ViewData["Title"] = "_Admin";
 }
 
 
-<h1>_Admin</h1>
+<h1>@UserManager.GetUserAsync(User)).NormalizedUserName</h1>
 
-<h2>About me</h2>
+<h2>Om mig</h2>
 <div class="row">
     <div class="col-sm-4 col-md-3 col-lg-2">
         <img id="profile-picture" class="border border-dark" src="~/images/bild-saknas.jpg" alt="Alternate Text" width="128" height="128" class="rounded" />
