--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -58,7 +58,7 @@
 
             <tr>
                 <td>
-                    <img src="~/images/@Url.Content(item.Path)" alt="Image not loaded" />
+                    <img src="~/images/@Url.Content(item.Path)" alt="Image not loaded" width="200" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
