--- a/QFun/Views/MyPage/_Admin.cshtml
+++ b/QFun/Views/MyPage/_Admin.cshtml
@@ -5,20 +5,11 @@
 }
 
 
-<h1>@UserManager.GetUserAsync(User)).NormalizedUserName</h1>
+<h2>@UserManager.GetUserAsync(User)).NormalizedUserName</h2>
 
-<h2>Om mig</h2>
-<div class="row">
-    <div class="col-sm-4 col-md-3 col-lg-2">
-        <img id="profile-picture" class="border border-dark" src="~/images/bild-saknas.jpg" alt="Alternate Text" width="128" height="128" class="rounded" />
-    </div>
-
-    <div id="about-me-information" class=" col-sm-5 col-md-4 col-lg-3">
-        <p>
-            Email: @User.Identity.Name
-        </p>
-    </div>
-
-</div>
+<ol class="breadcrumb">
+    <li class="breadcrumb-item"><a asp-area="Views" asp-controller="MyPage" asp-action="_AboutMe">Om mig</a></li>
+    <li class="breadcrumb-item mt-lg-auto"><a asp-area="Views" asp-controller="MyPage" asp-action="_Chart">Utmanings statistik </a></li>
+</ol>
 
 
