--- a/QFun/Views/Challenges/Index.cshtml
+++ b/QFun/Views/Challenges/Index.cshtml
@@ -47,6 +47,9 @@
             <th>
                 Lägg till bidrag
             </th>
+            <th>
+                Ta bort
+            </th>
 
         </tr>
     </thead>
