--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -48,6 +48,9 @@
             <th>
                 Röster
             </th>
+            <th>
+                Ta bort
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -79,7 +82,7 @@
                     {
                         <a asp-action="DeleteContributionAdmin" asp-route-id1="@item.Id" asp-route-id2="@Model.ChallengeId">Ta bort</a>
                     }
-                    @if (SignInManager.IsSignedIn(User) && User.Identity.Name == item.User.UserName)
+                    @if (SignInManager.IsSignedIn(User) && User.Identity.Name == item.User.UserName && !User.IsInRole("Admin"))
                     {
                         <a asp-action="DeleteContributionUser" asp-route-id1="@item.Id" asp-route-id2="@Model.ChallengeId">Ta Bort</a>
                     }
