--- a/QFun/Views/Home/Index.cshtml
+++ b/QFun/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
-﻿@{
+﻿@model QFun.Models.HomePageVm.HomeIndexVm
+
+
+@{
     ViewData["Title"] = "Hem";
 }
 
 <div class="text-center">
     <h1 class="display-4">Välkommen</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <table class="table table-striped table table-bordered">
+        <thead class="thead-dark">
+            <tr>
+                <th>
+                    Bild
+                </th>
+                <th>
+                    Beskrivning
+                </th>
+                <th>
+                    Gjord av
+                </th>
+                <th>
+                    Röster
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Contributions)
+            {
+
+
+                <tr>
+                    <td>
+                        <img src="~/images/@Url.Content(item.Path)" alt="Image not loaded" width="200" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.User.UserName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Votes)
+                    </td>
+                </tr>
+
+            }
+
+
+        </tbody>
+    </table>
 </div>
