--- a/QFun/Views/MyPage/_User.cshtml
+++ b/QFun/Views/MyPage/_User.cshtml
@@ -1,13 +1,31 @@
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<QFun.Data.DbTables.ApplicationUser> UserManager
+@inject SignInManager<QFun.Data.DbTables.ApplicationUser> SignInManager
+
 @{
     ViewData["Title"] = "_User";
 }
 
-<h2>@((await UserManager.GetUserAsync(User)).NormalizedUserName)</h2>
+<h2>@((await UserManager.GetUserAsync(User)).UserName)</h2>
 <ol class="breadcrumb">
     <li class="breadcrumb-item"><a asp-area="Views" asp-controller="MyPage" asp-action="_AboutMe">Om mig</a></li>
     <li class="breadcrumb-item mt-lg-auto"><a asp-area="Views" asp-controller="MyPage" asp-action="_Chart">Utmanings statistik </a></li>
 </ol>
+
+<a asp-action="_User">
+    @if (Model == null)
+    {
+        <span>no items found</span>
+    }
+    else
+    {
+        @foreach (var item in Model)
+        {
+            @item.Description
+        }
+    }
+</a>
+
+
 
 
