--- a/QFun/Views/MyPage/Index.cshtml
+++ b/QFun/Views/MyPage/Index.cshtml
@@ -2,7 +2,6 @@
 @inject SignInManager<QFun.Data.DbTables.ApplicationUser> SignInManager
 @inject UserManager<QFun.Data.DbTables.ApplicationUser> UserManager
 @inject RoleManager<IdentityRole> RoleManager
-@model IEnumerable<QFun.Data.DbTables.Contribution>
 @{
     ViewData["Title"] = "MyPage";
 }
@@ -16,8 +15,8 @@
     }
     else
     {
-        @*<partial name="_User.cshtml" />*@
-        await Html.PartialAsync("_User", Model);
+        <partial name="_User.cshtml"/>
+        //await Html.PartialAsync("_User");
     }
 }
 else
