--- a/QFun/Views/MyPage/_User.cshtml
+++ b/QFun/Views/MyPage/_User.cshtml
@@ -21,7 +21,21 @@ else
 {
     @foreach (var item in Model.Contributions)
     {
-        @item.Description
+        
+        <tr>
+            <td>
+                <img src="~/images/@Url.Content(item.Path)" alt="Image not loaded" width="200" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Votes)
+            </td>
+        </tr>
     }
 }
 
