--- a/QFun/Views/Challenges/Index.cshtml
+++ b/QFun/Views/Challenges/Index.cshtml
@@ -71,7 +71,7 @@
                     </a>
                 </td>
                 <td>
-                    @if (SignInManager.IsSignedIn(User)) //&& User.IsInRole("Admin"))
+                    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                     {
                         <a asp-action="DeleteChallengeAdmin" asp-route-id="@item.Id">Ta bort</a>
                     }
