--- a/QFun/Views/MyPage/_User.cshtml
+++ b/QFun/Views/MyPage/_User.cshtml
@@ -19,24 +19,40 @@
 }
 else
 {
-    @foreach (var item in Model.Contributions)
-    {
-        
-        <tr>
-            <td>
-                <img src="~/images/@Url.Content(item.Path)" alt="Image not loaded" width="200" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.User.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Votes)
-            </td>
-        </tr>
-    }
+    <table class="table table-striped table table-bordered">
+        <thead class="thead-dark">
+            <tr>
+                <th>
+                    Bild
+                </th>
+                <th>
+                    Beskrivning
+                </th>
+                <th>
+                    Röster
+                </th>
+
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Contributions)
+            {
+
+                <tr>
+                    <td>
+                        <img src="~/images/@Url.Content(item.Path)" alt="Image not loaded" width="200" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Votes.Count)
+                    </td>
+                </tr>
+            }
+
+        </tbody>
+    </table>
 }
 
 
