--- a/QFun/Views/MyPage/_Chart.cshtml
+++ b/QFun/Views/MyPage/_Chart.cshtml
@@ -16,20 +16,22 @@
     var voteData = [];
     var chData = [];
     var coData = [];
+    var chId = [];
     var i = 0;
 
     Object.keys(dbData).forEach(function (item) {
         //console.log(dbData[i].votes);
         voteData[i] = dbData[i].votes;
-        chData[i] = dbData[i].challengeName;
-        //coData[i] = dbData[i].coName;
+        chData[i] = dbData[i].contributionDate;
+        coData[i] = dbData[i].challengeName;
+        chId[i] = dbData[i].challengeId;
         i++;
     });
     var ctx = document.getElementById('myChart').getContext('2d');
     var myChart = new Chart(ctx, {
         type: 'bar',
         data: {
-            labels: chData,
+            labels: coData,
             datasets: [{
                 label: 'Antal röster',
                 data: voteData,
@@ -41,7 +43,7 @@
                     'rgba(153, 102, 255, 0.2)',
                     'rgba(255, 159, 64, 0.2)'
                 ],
-                //labels: coData,
+                labels: chData,
                 borderColor: [
                     'rgba(255, 99, 132, 1)',
                     'rgba(54, 162, 235, 1)',
@@ -66,32 +68,54 @@
                 yAxes: [{
                     stacked: true,
                     display: true,
+                    ticks: {
+                        min: 0,
+                        stepSize: 1
+                    },
                     scaleLabel: {
                         display: true,
                         labelString: 'Röster'
                     }
                 }]
             },
- 
+ //
+            ///
+            tooltips: {
+                callbacks: {
+
+                    label: function (tooltipItem, data) {
+
+                        var dataset = data.datasets[tooltipItem.datasetIndex];
+                        var index = tooltipItem.index;
+                        return dataset.labels[index] + ': ' + dataset.data[index];
+
+                    }
+                }
+            }
+///
+            //
         }
     });
     ///
     var test = document.getElementById('myChart');
     test.onclick = function (e) {
         var bar = myChart.getElementAtEvent(e);
+        //var contribution = chId[0];
+        var j = 0;
         if (!bar.length) return; // return if not clicked on bar
         var label = bar[0]._model.label;
-        switch (label) {
-            // add case for each label
-            case chData[0]:
-                alert('Klickade på Bidrag1');
-                window.open('www.example.com/foo');
+        console.log(label);
+        Object.keys(dbData).forEach(function (item) {
+            //console.log("Hello");
+        switch (label)
+        {
+                case coData[j]:
+                //alert('Klickade på Bidrag1');
+                window.open('https://localhost:44384/Challenges/Contributions/' + chId[j]);
                 break;
-            case chData[1]:
-                alert('Klickade på Bidrag2');
-                window.open('www.example.com/bar');
-                break;
-            // resten ...
         }
+            j++;
+        });
+        
     }
 </script>
