--- a/QFun/Areas/Identity/Pages/Account/Login.cshtml
+++ b/QFun/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Logga in</h1>
 <div class="row">
     <div class="col-md-4">
         <section>
@@ -42,7 +42,7 @@
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Registrera ny användare</a>
                     </p>
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Sänd ny email-bekräftelse</a>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Skicka ny email-bekräftelse</a>
                     </p>
                 </div>
             </form>
@@ -69,7 +69,7 @@
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Logga in med ditt @provider.DisplayName konto">@provider.DisplayName</button>
                                 }
                             </p>
                         </div>
