--- a/QFun/Areas/Identity/Pages/Account/Register.cshtml
+++ b/QFun/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Registrera dig</h1>
 
 <div class="row">
     <div class="col-md-4">
@@ -51,7 +51,7 @@
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Logga in med ditt @provider.DisplayName konto">@provider.DisplayName</button>
                                 }
                             </p>
                         </div>
