--- a/QFun/Views/Challenges/Contributions.cshtml
+++ b/QFun/Views/Challenges/Contributions.cshtml
@@ -69,27 +69,30 @@
                 }
                 @*<input type="submit" name="VoteButton" value="Rösta" class="btn btn-success"/>*@
             </td>
-            <td>
-                @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
-                {
-                    <a asp-action="EditContributions" asp-route-id="@item.Id">Redigera</a>
-                }
-                @if (SignInManager.IsSignedIn(User) && User.Identity.Name == item.User.UserName && !User.IsInRole("Admin"))
-                {
-                    <a asp-action="EditContributions" asp-route-id="@item.Id">Redigera</a>
-                }
-            </td>
-            <td>
-                @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
-                {
-                    <a asp-action="DeleteContributionAdmin" asp-route-id1="@item.Id" asp-route-id2="@Model.ChallengeId">Ta bort</a>
-                }
-                @if (SignInManager.IsSignedIn(User) && User.Identity.Name == item.User.UserName && !User.IsInRole("Admin"))
-                {
-                    <a asp-action="DeleteContributionUser" asp-route-id1="@item.Id" asp-route-id2="@Model.ChallengeId">Ta bort</a>
-                }
-            </td>
+            @if (SignInManager.IsSignedIn(User))
+            {
+                <td>
+                    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                    {
+                        <a asp-action="EditContributions" asp-route-id="@item.Id">Redigera</a>
+                    }
+                    @if (SignInManager.IsSignedIn(User) && User.Identity.Name == item.User.UserName && !User.IsInRole("Admin"))
+                    {
+                        <a asp-action="EditContributions" asp-route-id="@item.Id">Redigera</a>
+                    }
+                </td>
 
+                <td>
+                    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                    {
+                        <a asp-action="DeleteContributionAdmin" asp-route-id1="@item.Id" asp-route-id2="@Model.ChallengeId">Ta bort</a>
+                    }
+                    @if (SignInManager.IsSignedIn(User) && User.Identity.Name == item.User.UserName && !User.IsInRole("Admin"))
+                    {
+                        <a asp-action="DeleteContributionUser" asp-route-id1="@item.Id" asp-route-id2="@Model.ChallengeId">Ta bort</a>
+                    }
+                </td>
+            }
         </tr>
 
         }
